force-app/main/default/objects/User_Settings__c/User_Settings__c.object-meta.xml
<CustomObject>
    <label>e2a User Settings</label>
    <nameField>
        <label>User Settings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>