force-app/main/default/objects/User_Settings__c/fields/Default_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Default_Business_Unit__c</fullName>
    <inlineHelpText>The business unit selected by default in the email editor.</inlineHelpText>
    <label>Default Business Unit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>