force-app/main/default/objects/User_Settings__c/fields/Default_Shift_x_Business_Hour_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Shift_x_Business_Hour_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to SF built in Business Hours object. Filled in if &quot;Use a Business Hours schedule&quot; is selected in the &quot;Default Shift Type&quot; picklist</description>
    <inlineHelpText>Lookup to SF built in Business Hours object. Filled in if &quot;Use a Business Hours schedule&quot; is selected in the &quot;Default Shift Type&quot; picklist</inlineHelpText>
    <label>Default Shift - Business Hour Id</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>QA_User_Settings_Default_Shift_x_BH_Id</relationshipName>
    <type>Lookup</type>
</CustomField>