force-app/main/default/objects/User_Settings__c/fields/Default_Shift_x_Business_Hours_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Default_Shift_x_Business_Hours_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It stores whether user is available inside Business Hours Schedule or outside.</description>
    <inlineHelpText>It stores whether user is available inside Business Hours Schedule or outside.</inlineHelpText>
    <label>Reversed - Use hours only OUTSIDE BH</label>
    <type>Checkbox</type>
</CustomField>