force-app/main/default/objects/User_Settings__c/fields/Default_Shift_x_Calendar_Items_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Shift_x_Calendar_Items_Type__c</fullName>
    <description>Which Calendar Entries are your shift?</description>
    <inlineHelpText>Which Calendar Entries are your shift?</inlineHelpText>
    <label>Which Calendar Entries are your shift?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Calendar items</fullName>
            </value>
            <value>
                <fullName>Time OUTSIDE all calendar items</fullName>
            </value>
            <value>
                <fullName>Just specific types of calendar Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>