force-app/main/default/objects/User_Settings__c/fields/Default_Shift_x_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Shift_x_Type__c</fullName>
    <description>My Default Shift / Working Hours</description>
    <inlineHelpText>My Default Shift / Working Hours</inlineHelpText>
    <label>My Default Shift / Working Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>Use a Business Hours schedule</fullName>
            </value>
            <value>
                <fullName>Use My Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>