force-app/main/default/objects/User_Settings__c/fields/EC_Default_Attachment_Location__c.field-meta.xml
<CustomField>
    <fullName>EC_Default_Attachment_Location__c</fullName>
    <description>Remembering of the last option selected (i.e. use last option as default for next time) per user per parent object</description>
    <inlineHelpText>Default location to select attachment from in email client</inlineHelpText>
    <label>EC Default Attachment Location</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>