force-app/main/default/objects/User_Settings__c/fields/EC_Default_From_Address__c.field-meta.xml
<CustomField>
    <fullName>EC_Default_From_Address__c</fullName>
    <inlineHelpText>The email from-address set by default in the email editor.</inlineHelpText>
    <label>EC Default From Address</label>
    <type>Email</type>
</CustomField>