force-app/main/default/objects/User_Settings__c/fields/EC_Default_From_Address_New__c.field-meta.xml
<CustomField>
    <fullName>EC_Default_From_Address_New__c</fullName>
    <label>EC Default From Address</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>