force-app/main/default/objects/User_Settings__c/fields/EC_Default_From_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_Default_From_Address_Type__c</fullName>
    <inlineHelpText>The email from-address set by default in the email editor.</inlineHelpText>
    <label>EC Default From Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>user</fullName>
                <default>true</default>
                <label>user</label>
            </value>
            <value>
                <fullName>user-alt</fullName>
            </value>
            <value>
                <fullName>owea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>