force-app/main/default/objects/User_Settings__c/fields/EC_Default_Reply_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>EC_Default_Reply_Email_Template__c</fullName>
    <inlineHelpText>The default Email Template used by the email editor for replied emails.</inlineHelpText>
    <label>EC_Default_Reply_Email_Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>