force-app/main/default/objects/User_Settings__c/fields/EC_Default_Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>EC_Default_Template_Folder__c</fullName>
    <inlineHelpText>Default email template folder while selecting templates in email client</inlineHelpText>
    <label>EC Default Template Folder</label>
    <length>18</length>
    <type>Text</type>
</CustomField>