force-app/main/default/objects/User_Settings__c/fields/EC_Email_Format__c.field-meta.xml
<CustomField>
    <fullName>EC_Email_Format__c</fullName>
    <inlineHelpText>The type of text editor displayed by default in the email editor.</inlineHelpText>
    <label>EC Email Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
                <default>true</default>
                <label>HTML</label>
            </value>
            <value>
                <fullName>Plain Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>