force-app/main/default/objects/User_Settings__c/fields/EC_Hide_Email_Template_Overwrite_Warning__c.field-meta.xml
<CustomField>
    <fullName>EC_Hide_Email_Template_Overwrite_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hides the confirmation popup that warns that the contents of your email that you are composing will be overwritten when you select a new template</inlineHelpText>
    <label>EC Hide Email Template Overwrite Warning</label>
    <type>Checkbox</type>
</CustomField>