force-app/main/default/objects/User_Settings__c/fields/EC_OWEA_Id__c.field-meta.xml
<CustomField>
    <fullName>EC_OWEA_Id__c</fullName>
    <label>EC OWEA Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>