force-app/main/default/objects/User_Settings__c/fields/EC_Sender_BCC_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>EC_Sender_BCC_Default_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Sender BCC check box in the email editor will default to checked status and if unchecked it will default to unchecked.</inlineHelpText>
    <label>EC Sender BCC Default Value</label>
    <type>Checkbox</type>
</CustomField>