force-app/main/default/objects/User_Settings__c/fields/EC_Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>EC_Sender_Email__c</fullName>
    <description>This address must match either your user email address or the email address specified in My Email Settings. Specifying any other address will result in emails being sent from the wrong email address.</description>
    <inlineHelpText>This address must match either your user email address or the email address specified in My Email Settings. Specifying any other address will result in emails being sent from the wrong email address.</inlineHelpText>
    <label>EC Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>