force-app/main/default/objects/User_Settings__c/fields/EC_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Sender_Name__c</fullName>
    <inlineHelpText>This name must match either your user first and last name or the Email Name specified in My Email Settings. Specifying any other name will result in the wrong from-address display name on emails.</inlineHelpText>
    <label>EC Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>