force-app/main/default/objects/User_Settings__c/fields/EC_Use_Signature__c.field-meta.xml
<CustomField>
    <fullName>EC_Use_Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, the current user&apos;s email signature (set within &quot;My Email Settings&quot;) is applied to an email after it is sent from the email editor. If unchecked, no signature is applied.</inlineHelpText>
    <label>EC Use Signature</label>
    <type>Checkbox</type>
</CustomField>