force-app/main/default/objects/User_Settings__c/fields/OOO_x_Source__c.field-meta.xml
<CustomField>
    <fullName>OOO_x_Source__c</fullName>
    <description>My OOO / non-working times</description>
    <inlineHelpText>My OOO / non-working times</inlineHelpText>
    <label>My OOO / non-working times</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Default (from Global Settings)</fullName>
            </value>
            <value>
                <fullName>Use My Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>