force-app/main/default/objects/User_Settings__c/fields/QA_Logout__c.field-meta.xml
<CustomField>
    <fullName>QA_Logout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Logout</label>
    <type>Checkbox</type>
</CustomField>