force-app/main/default/objects/User_Settings__c/fields/QA_Logout_Time__c.field-meta.xml
<CustomField>
    <fullName>QA_Logout_Time__c</fullName>
    <label>QA Logout Time</label>
    <type>DateTime</type>
</CustomField>