force-app/main/default/objects/User_Settings__c/fields/WO_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>WO_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Id of Business Hours to use. It is only applicable when Working Hours field has &quot;Business Hours&quot; selected as its value. When applied, the selected business hours are used for this user&apos;s working hours calculations elsewhere in Q-assign.</description>
    <inlineHelpText>Select the Id of Business Hours to use. It is only applicable when Working Hours field has &quot;Business Hours&quot; selected as its value. When applied, the selected business hours are used for this user&apos;s working hours calculations elsewhere in Q-assign.</inlineHelpText>
    <label>Business Hours (No Longer Used)</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>QA User Settings (Business Hours)</relationshipLabel>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>