force-app/main/default/objects/User_Settings__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <description>Stores the type of working hours to be used for this user when calculation is performed based on member&apos;s working hours (such as in Member Point scoring rules).</description>
    <inlineHelpText>Select the type of working hours to be used for this user when calculation is performed based on member&apos;s working hours (such as in Member Point scoring rules).</inlineHelpText>
    <label>Working Hours (No Longer Used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>